# opti-route

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml
backend/: manage.py  requirements.txt
backend/api/: exceptions.py  serializers.py  task_store.py  tasks.py  urls.py  views.py
backend/api/tests/: test_api.py  test_task_store.py  test_tasks.py
backend/optiroute_config/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
engine/: .gitkeep  CMakeLists.txt  bindings.cpp  optimizer.cpp  optimizer.h
engine/tests/: test_bindings.py  test_full_stack.py  test_optimizer.cpp
frontend/: index.html
frontend/css/: style.css
frontend/js/: app.js
